--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,1 +1,26 @@
-<p>dashboard works!</p>
+
+
+
+<table id="data" class="table table-striped  table-hover">
+    <tr>
+
+      <th>id</th>
+
+      <th>password</th>
+
+    </tr>
+    <tr *ngFor="let user of users; let i = index">
+
+      <td>{{user.studentID}}</td>
+      <td>{{user.password}}</td>
+
+      <td>
+
+      </td>
+    </tr>
+   
+
+
+  </table>
+
+
