--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,26 +1,34 @@
 
+<div class="px-3 py-3 text-primary ">
+  All available users
+</div>
+
+<div class="pt-3">
+
+  <table class="table table-hover table-striped">
+    <thead class="tableheader">
+      <tr>
+        <th scope="col">ID</th>
+        <th scope="col">Password</th>
 
 
-<table id="data" class="table table-striped  table-hover">
-    <tr>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let user of users; let i = index">
+        <td>{{user.studentID}}</td>
+        <td>{{user.password}}</td>
+      </tr>
+      <tr>
 
-      <th>id</th>
+      </tr>
 
-      <th>password</th>
-
-    </tr>
-    <tr *ngFor="let user of users; let i = index">
-
-      <td>{{user.studentID}}</td>
-      <td>{{user.password}}</td>
-
-      <td>
-
-      </td>
-    </tr>
-   
-
-
+    </tbody>
   </table>
 
+  <div class="px-3 py-3">
+    <button (click)="logOut()" class="btn btn-secondary">Log Out</button>
 
+  </div>
+
+</div>
