--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -1,17 +1,8 @@
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+<nav id="navbar" class="navbar navbar-expand-sm  ">
     <div class="container-fluid">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Active</a>
-        </li>
-       <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
+          <h4 class="px-2 py-2">Dashboard</h4>
         </li>
       </ul>
     </div>
