--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -6,7 +6,7 @@
 	align-items: center;
 	min-height: 100vh;
 	font-family: 'Jost', sans-serif;
-	background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e);
+	background: linear-gradient(to bottom, #002383, #0031b9, #002383);
 }
 .main{
 	width: 350px;
@@ -54,7 +54,7 @@ input{
 	justify-content: center;
 	display: block;
 	color: #fff;
-	background: #573b8a;
+	background: #000268;
 	font-size: 1em;
 	font-weight: bold;
 	margin-top: 20px;
@@ -65,7 +65,7 @@ input{
 	cursor: pointer;
 }
 .button:hover{
-	background: #6d44b8;
+	background: #445fb8;
 }
 .login{
 	height: 460px;
@@ -75,7 +75,7 @@ input{
 	transition: .8s ease-in-out;
 }
 .login label{
-	color: #573b8a;
+	color: #0031b9;
 	transform: scale(.6);
 }
 
