bug fix in login function
login function is same as sign up function

will change it when i read and authenticate using api not firebase

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -40,7 +40,7 @@
         <div class="login">
 
 
-            <form #LoginForm="ngForm" (ngSubmit)="onLogin()">
+            <form #LoginForm="ngForm" (ngSubmit)="onLogin(LoginForm.value)">
                 <label for="chk" aria-hidden="true">Login</label>
 
                 <div class="form-group">
